examples/test/testpolicy8357.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8357
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key42: value6
      key12: value42
      key37: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value26
          key31: value9
      podSelector:
        matchLabels:
          key15: value5
